assets/css/styles.css
@import url('http://fonts.cdnfonts.com/css/tuffy');
@import url('https://fonts.googleapis.com/css?family=Cherry Bomb');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

p {
    font-family: 'Tuffy', sans-serif;
    font-size: 28px;
    color: #F5F5F5;
}

body{
    background-color: #EABABA;
}

header{
    padding: 30px 30px;
    margin-bottom: 100px;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    font-size: 48px;
}

footer{
    background-color: #8A5757;
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.language {
    font-size: 40px;
    font-family: Arial, Helvetica, sans-serif;
    color: rgba(0, 0, 0, 0.3);
    text-decoration: none;
}

.icons-header{
    width: 35px;
    height: 35px;
    opacity: 50%;
    text-decoration: none;
    margin-left: 10px;
}

.block{
    display: flex;
    justify-content: flex-end;
}

.profile{
    display: flex;
    flex-direction: column;
    align-items: center;
}


.gps{
    width: 15px;
    opacity: 50%;
    text-decoration: none;
    margin-left: 8px;
}

.location{
    font-size: 18px;
    padding-top: 30px;
}

.icons-socials{
    width: 35px;
    height: 35px;
    opacity: 50%;
    margin-left: 10px;
    text-decoration: none;
}

.icons-profile{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 18px;
}

.main-content{
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 1024px;
}

.block{
    margin-top: 80px;
}

.title-main-content{
    font-family: 'Cherry Bomb', sans-serif;
    font-size: 128px;
    color: #8A5757;
    margin: 0;
    line-height: 80%;
    padding-bottom: 30px;
}

.name {
    color: #8A5757;
}

.mid-main-content{
    margin-left: 100px;
    display: flex;
    flex-direction: column;
    width: 600px;
}

.text-main-content{
    padding-bottom: 50px;
}

.bottom-main-content{
    display: flex;
    align-items: center;
}

.hover-effect:hover > a{
    color: rgba(0, 0, 0, 1);
}

.hover-effect:hover > img{
    opacity: 100%;
}

.arrow{
    width: 25px;
    opacity: 50%;
    text-decoration: none;
    margin-right: 10px;
}

.button-main-content{
    font-family: 'Tuffy', sans-serif;
    font-size: 22px;
    color: rgba(0, 0, 0, 0.5);
    text-decoration: none;
    margin-right: 60px;
}

.wavy-background{
    display: flex;
    flex-direction: column;
    position: absolute;
    right: 0;
}

.wavy{
    width: 150px;
}


.project-content{
    /* background-image: url("../images/bg_project_light.jpg"); */
    background-color: #8A5757;
    height: 1024px;
    left: 0;
    right: 0;
    padding-top: 100px;
}

.project-title{
    font-family: 'Cherry Bomb', sans-serif;
    font-size: 96px;
    color: #EABABA;
    display: flex;
    justify-content: flex-end;
    margin-right: 100px;
    letter-spacing: 4px;
    padding-bottom: 100px;
}

.projects{
   display: flex;
   justify-content: space-around;
   margin: 0 180px;
}

.project-infos{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 350px;
}

.project-subtitle{
    font-family: 'Tuffy', sans-serif;
    font-weight: 700;
    color: #F5F5F5;
    font-size: 30px;
}

.project-text{
    font-size: 20px;
    margin-left: 30px;
    margin-right: 30px;
    text-align: center;
}

.icon-repo{
    width: 35px;
    text-decoration: none;
    margin-left: 10px;
    margin-right: 10px;
    text-align: center;
}

.icon-repo-text{
    font-family: 'Tuffy', sans-serif;
    color: #F5F5F5;
    font-size: 20px;
}

.project-wm{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 170px;
    padding-top: 30px;
}

.studying-info{
    display: flex;
    justify-content: center;
    align-items: center;
}

.studying-text{
    opacity: 50%;
    font-size: 20px;
}

.about-me{
    padding-left: 150px;
}

.about-me-title{
    font-family: 'Cherry Bomb', sans-serif;
    font-size: 96px;
    color: #8A5757;
    display: flex;
    justify-content: flex-start;
    letter-spacing: 4px;
    padding-top: 100px;
    padding-bottom: 100px;
}

.about-me-content{
    /* background-image: url("../images/bg_aboutme_light.jpg"); */
    background-color: #EABABA;
    /* width: 100%; */
    height: 1024px;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    align-items: flex-start;
}

#second-text{
    display: flex;
    align-self: flex-end;
}

.about-me-text{
    width: 600px;
    margin-right: 100px;
}


.bold-brown{
    color: #8A5757;
}

.bold-pink{
    color: #EABABA;
}


.footer-text{
    font-size: 16px;
    color: #EABABA;
}

.cat{
    width: 100px;
}

.organic-shape1{
    position: absolute;
    display: block;
    align-items: flex-start;
    z-index: 1;
    height: auto;
}

.organic-shape2{
    position: absolute;
    display: block;
    right: -100px;
    z-index: 1;
    height: auto;
}
  

